# MultiSql

./: README.md  pyproject.toml
src/multisql/: crew.py  flow.py  main.py  main.py.bak
src/multisql/crews/nl_understanding_crew/: crew.py
src/multisql/crews/nl_understanding_crew/config/: agents.yaml  tasks.yaml
src/multisql/crews/schema_matching_crew/: crew.py
src/multisql/crews/schema_matching_crew/config/: agents.yaml  tasks.yaml
src/multisql/crews/sql_generator_crew/: crew.py
src/multisql/crews/sql_generator_crew/config/: agents.yaml  tasks.yaml
src/multisql/models/: state.py
src/multisql/tools/: complexity_analyzer.py  performance_tracker.py  schema_manager.py
